Definitions work