@@ -1,13 +1,17 @@
 package io.whitford.danstacks;
 
+import java.util.AbstractMap;
 import java.util.ArrayDeque;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 public class Interpreter {
 	private final Deque<Integer> dataStack = new ArrayDeque<>();
@@ -15,21 +19,28 @@ public class Interpreter {
 	private final Deque<String> words = new ArrayDeque<>();
 	private final Map<String, Runnable> primitives = new HashMap<>();
 	private final Map<String, List<String>> dictionary = new HashMap<>();
+	private boolean immediate;
+	private AbstractMap.SimpleEntry<String, List<String>> compileFrame;
 
 	public Interpreter( Iterator<String> inputStream ) {
 		this.inputStream = inputStream;
+		immediate = true;
 		initPrimitives();
 		initDict();
 	}
 
 	private void initPrimitives() {
 		primitives.put( "stack", () -> {
-			var li = dataStack.stream().map( Object::toString ).collect( Collectors.toList() );
-			System.out.println( "head -> [ " + String.join( ", ", li ) + " ]");
+			var li = new ArrayList<>(dataStack.stream().map(Object::toString).toList());
+			Collections.reverse( li );
+			System.out.println( "[ " + String.join( ", ", li ) + " ] <- head" );
 		} );
-		primitives.put( ":?", () -> System.out.println(primitives.keySet()) );
+		primitives.put( ":?", () -> {
+			System.out.println( primitives.keySet() );
+			System.out.println( dictionary.keySet() );
+		} );
 
-		primitives.put( ".", () -> System.out.println( dataStack.pop() ) );
+		primitives.put( ".", () -> System.out.printf( "%d ", dataStack.pop() ) );
 		primitives.put( "emit", () -> System.out.print( (char) dataStack.pop().intValue() ) );
 		primitives.put( "cr", () -> System.out.println() );
 
@@ -37,26 +48,62 @@ public class Interpreter {
 		primitives.put( "-", () -> dataStack.push( dataStack.pop() - dataStack.pop() ) );
 		primitives.put( "*", () -> dataStack.push( dataStack.pop() * dataStack.pop() ) );
 		primitives.put( "/", () -> dataStack.push( dataStack.pop() / dataStack.pop() ) );
+
+		primitives.put("over", () -> {
+			var a = dataStack.pop();
+			var b = dataStack.pop();
+			dataStack.push(b);
+			dataStack.push(a);
+			dataStack.push(b);
+		});
+		primitives.put("dup", () -> {
+			var a = dataStack.pop();
+			dataStack.push( a );
+			dataStack.push( a );
+		});
+
+		primitives.put( ":", () -> {
+			this.compileFrame = null;
+			immediate = false;
+		} );
+		primitives.put( ";", () -> {
+			dictionary.put( compileFrame.getKey(), compileFrame.getValue() );
+			compileFrame = null;
+			immediate = true;
+		} );
 	}
 
 	private void initDict() {
-		dictionary.put("space", List.of("32", "emit"));
+		dictionary.put( "space", List.of( "32", "emit" ) );
 	}
 
 	public void run() {
 		while ( !words.isEmpty() || inputStream.hasNext() ) {
-			if (words.isEmpty()) {
+			if ( words.isEmpty() ) {
 				words.push( inputStream.next() );
 			}
 			var word = words.pop();
 
 			try {
+				if ( !immediate ) {
+					if ( compileFrame == null ) {
+						compileFrame = new AbstractMap.SimpleEntry<>( word, new ArrayList<>() );
+					} else if (dictionary.containsKey( word )) {
+						compileFrame.getValue().addAll( dictionary.get( word ) );
+					} else if (word.equals( ";" )) {
+						primitives.get( ";" ).run();
+					} else {
+						compileFrame.getValue().add( word );
+					}
+					continue;
+				}
+
 				if ( primitives.containsKey( word ) ) {
 					primitives.get( word ).run();
 					continue;
 				}
 
-				if (dictionary.containsKey( word )) {
+				if ( dictionary.containsKey( word ) ) {
 					words.addAll( dictionary.get( word ) );
 					continue;
 				}
@@ -71,4 +118,5 @@ public class Interpreter {
 			}
 		}
 	}
+
 }
